Fix: Navbar to display the correct content

--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -26,5 +26,6 @@
 
   "button_text": "Go to app",
   "dropdown_text": "Country & Language",
-  "contact_us": "Contact Us"
+  "contact_us": "Contact Us",
+  "your_profile_text": "Your profile"
 }
