--- a/src/blocks/Welcome/locales/en.json
+++ b/src/blocks/Welcome/locales/en.json
@@ -1,1 +1,7 @@
-{}
+{
+  "heading": "Welcome to",
+  "country": "Country",
+  "language": "Language",
+  "placeholder": "Select",
+  "button": "Continue"
+}
