--- a/src/blocks/RegisterAnonymous/locales/en.json
+++ b/src/blocks/RegisterAnonymous/locales/en.json
@@ -1,11 +1,11 @@
 {
   "paragraph_1": "Your anonymous access code is",
   "password_label": "Password",
-  "paragraph_2": "I agree with the",
-  "paragraph_3": "and",
-  "password_error": "Password error",
-  "privacy_policy": "Privacy Policy",
-  "terms_of_use": "Terms of Conditions",
+  "terms_agreement_text_1": "I agree with the",
+  "terms_agreement_text_2": "Privacy Policy",
+  "terms_agreement_text_3": "and",
+  "terms_agreement_text_4": "Terms of Conditions",
+  "password_error": "Password should contain at least 8 characters, 1 uppercase letter, 1 lowercase letter and 1 number",
   "register_button_label": "Register",
   "redirect_login_button_label": "I already have an account"
 }
