--- a/src/pages/FAQ/locales/en.json
+++ b/src/pages/FAQ/locales/en.json
@@ -1,5 +1,4 @@
 {
   "heading": "FAQ",
-  "subheading": "Here you can find answers to frequently asked questions.",
-  "no_results": "An error occured while loading the content."
+  "subheading": "Here you can find answers to frequently asked questions."
 }
