Refactor: QA review

--- a/src/pages/ProviderOverview/locales/en.json
+++ b/src/pages/ProviderOverview/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "heading": "Specialist overview",
-    "subheading": "Detailed overview of the profile of the specialist you selected",
-    "button_label": "Schedule consultation"
+  "heading": "Provider overview",
+  "subheading": "Detailed overview of the profile of the provider you selected",
+  "button_label": "Schedule consultation"
 }
