--- a/src/blocks/Login/locales/en.json
+++ b/src/blocks/Login/locales/en.json
@@ -1,6 +1,6 @@
 {
-  "email_label": "Email",
-  "email_placeholder": "user@mail.com",
+  "email_label": "Email / Access Token",
+  "email_placeholder": "Enter you email or access token",
   "password_label": "Password",
   "password_placeholder": "Enter your password",
   "forgot_password_label": "I forgot my password",
