--- a/src/blocks/RegisterAnonymous/locales/en.json
+++ b/src/blocks/RegisterAnonymous/locales/en.json
@@ -1,6 +1,9 @@
 {
+  "nickname_label": "Nickname *",
+  "nickname_placeholder": "Enter your nickname",
+  "nickname_error": "Nickname is required",
   "paragraph_1": "Your anonymous access code is",
-  "password_label": "Password",
+  "password_label": "Password *",
   "terms_agreement_text_1": "I agree with the",
   "terms_agreement_text_2": "Privacy Policy",
   "terms_agreement_text_3": "and",
