--- a/src/blocks/RegisterEmail/locales/en.json
+++ b/src/blocks/RegisterEmail/locales/en.json
@@ -1,8 +1,11 @@
 {
   "email_error": "Please enter a valid email",
   "password_error": "Password should contain at least 8 characters, 1 uppercase letter, 1 lowercase letter and 1 number",
-  "email_label": "Email",
-  "password_label": "Password",
+  "email_label": "Email *",
+  "nickname_label": "Nickname *",
+  "nickname_placeholder": "Enter your nickname",
+  "nickname_error": "Nickname is required",
+  "password_label": "Password *",
   "terms_agreement_text_1": "I agree with the",
   "terms_agreement_text_2": "Privacy Policy",
   "terms_agreement_text_3": "and",
