Add: API connection to the otificationPreferences blocks

--- a/src/blocks/NotificationPreferences/locales/en.json
+++ b/src/blocks/NotificationPreferences/locales/en.json
@@ -1,4 +1,5 @@
 {
   "email": "Email notifications",
-  "appointment": "Appointment notifications"
+  "appointment": "Appointment notifications",
+  "minutes_before": "minutes before"
 }
