Refactor: the ProviderOverview to keep the same design as in the other platforms

--- a/src/blocks/ProviderOverview/locales/en.json
+++ b/src/blocks/ProviderOverview/locales/en.json
@@ -1,15 +1,27 @@
 {
-  "years_of_experience": "Years Experience Overall",
-  "earliest_free_spot": "Earliest free spot for consultation",
-  "website": "Website",
-  "price_per_consultation": "Price per consultation (1 hour)",
-  "language_of_operation": "Language of operation",
-  "qualifications": "Qualifications",
-  "specialist_from": "Specialies from",
-  "education": "Education",
-  "approach": "Psychotherapeutic approach",
-  "work_with": "Working with",
-  "overall_consultations": "Overall done consultations",
-  "description": "Description",
-  "useful_for": "Can be useful for"
+  "earliest_spot_label": "Earliest free spot for consultation",
+  "languages_label": "Language of operation",
+  "education_label": "Education",
+  "work_with_label": "Working with",
+  "specializations_label": "Specializations",
+  "done_consultations_label": "Overall done consultations",
+  "description_label": "Description",
+  "edit_details": "Edit details",
+  "change_password": "Change password",
+  "delete_account": "Delete account",
+
+  "psychologist": "Psychologist",
+  "psychiatrist": "Psychiatrist",
+  "psychotherapist": "Psychotherapist",
+  "coach": "Coach",
+
+  "addiction": "Addiction",
+  "stress": "Stress",
+  "burnout": "Burnout",
+  "eating_disorder": "Eating disorder",
+  "depression": "Depression",
+  "anxiety": "Anxiety",
+  "panic_attack": "Panic attack",
+  "relationship": "Relationship",
+  "personal_development": "Personal development"
 }
