--- a/src/blocks/PrivacyPolicy/locales/en.json
+++ b/src/blocks/PrivacyPolicy/locales/en.json
@@ -1,3 +1,3 @@
 {
-  "no_results": "An error occured while loading the content."
+  "no_results": "There are no results for the selected country and language."
 }
