Add: toast notification on successfull update in UserDetails block

--- a/src/blocks/UserDetails/locales/en.json
+++ b/src/blocks/UserDetails/locales/en.json
@@ -34,5 +34,6 @@
   "data_processing_modal_heading": "Are you sure you want to remove the permission to process your personal data?",
   "data_processing_modal_text": "You will not have access to the consultations as we need your permission to process your personal data fo r them.",
   "data_processing_modal_confirm_button": "Remove permission",
-  "data_processing_modal_cancel_button": "Cancel"
+  "data_processing_modal_cancel_button": "Cancel",
+  "success_message": "Profile updated successfully"
 }
