Add: display text when there are no providers found in SelectProvider block

--- a/src/blocks/SelectProvider/locales/en.json
+++ b/src/blocks/SelectProvider/locales/en.json
@@ -1,1 +1,7 @@
-{}
+{
+  "psychologist": "Psychologist",
+  "psychiatrist": "Psychiatrist",
+  "psychotherapist": "Psychotherapist",
+  "coach": "Coach",
+  "no_match": "No providers matching your criteria"
+}
