--- a/src/blocks/ProviderOverview/locales/en.json
+++ b/src/blocks/ProviderOverview/locales/en.json
@@ -23,5 +23,6 @@
   "anxiety": "Anxiety",
   "panic_attack": "Panic attack",
   "relationship": "Relationship",
-  "personal_development": "Personal development"
+  "personal_development": "Personal development",
+  "button_label": "Schedule consultation"
 }
