Add: placeholder data in Consultations block and event handlers for different actions(edit,join, open details)

--- a/src/blocks/Consultations/locales/en.json
+++ b/src/blocks/Consultations/locales/en.json
@@ -1,4 +1,12 @@
 {
-    "upcoming_tab_label": "Upcoming",
-    "past_tab_label": "Past"
+  "upcoming_tab_label": "Upcoming",
+  "past_tab_label": "Past",
+  "sunday": "Sun",
+  "monday": "Mon",
+  "tuesday": "Tue",
+  "wednesday": "Wed",
+  "thursday": "Thu",
+  "friday": "Fri",
+  "saturday": "Sat",
+  "no_consultations": "You have no upcoming consultations"
 }
