--- a/src/pages/SelectProvider/locales/en.json
+++ b/src/pages/SelectProvider/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "heading": "Select a Specialist ",
-    "subheading": "Select the specialist that you want to talk to in a audio/video consultation",
-    "button_label": "Filter"
+  "heading": "Select a Provider ",
+  "subheading": "Select the provider that you want to talk to in a audio/video consultation",
+  "button_label": "Filter"
 }
