--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -14,6 +14,6 @@
   "emergency_button": "SOS Center",
 
   "button_text": "Go to app",
-  "contact_us": "Contact Us",
+  "contact_us": "Contact us",
   "your_profile_text": "Your profile"
 }
