--- a/src/blocks/UserProfile/locales/en.json
+++ b/src/blocks/UserProfile/locales/en.json
@@ -9,5 +9,6 @@
   "share_button_label": "Share the application",
   "contact_us_button_label": "Contact us",
   "privacy_policy_button_label": "Privacy Policy",
-  "FAQ_button_label": "FAQ"
+  "FAQ_button_label": "FAQ",
+  "mood_tracker_button_label": "Mood tracker"
 }
