Fix: ArticlesDashboard View all  button styling

--- a/src/blocks/ArticlesDashboard/locales/en.json
+++ b/src/blocks/ArticlesDashboard/locales/en.json
@@ -1,4 +1,5 @@
 {
   "heading": "Articles",
-  "heading_no_results": "No results."
+  "heading_no_results": "No results.",
+  "view_all": "View all"
 }
