--- a/src/modals/RequireRegistration/locales/en.json
+++ b/src/modals/RequireRegistration/locales/en.json
@@ -1,5 +1,5 @@
 {
   "heading": "You need to register to use this feature",
-  "text": "To use all the features of the app you need to have an anonymous or regular account.",
+  "text": "You need to create an anonymous or regular account to use all the app features.",
   "button": "Create an account"
 }
