--- a/src/pages/Articles/locales/en.json
+++ b/src/pages/Articles/locales/en.json
@@ -4,5 +4,5 @@
   "heading_most_read": "Most read Articles",
   "subheading_default": "You can find all articles here",
   "subheading_newest": "Here you can find newest articles",
-  "subheading_most_read": "Here you can find most read articles"
+  "subheading_most_read": "Here you can find the most read articles from all categories"
 }
