--- a/src/pages/PlatformRating/locales/en.json
+++ b/src/pages/PlatformRating/locales/en.json
@@ -1,4 +1,4 @@
 {
-    "heading": "Give us a rating",
-    "subheading": "To give us a rating, choose the amount of stars you want to give us and add additional comments, what do you think about the app"
+  "heading": "Want to rate us?",
+  "subheading": "We’ll be counting stars. Let’s stay honest. Tell us how you feel about this platform. Rate us and leave us your comment."
 }
