--- a/src/pages/RegisterAboutYou/locales/en.json
+++ b/src/pages/RegisterAboutYou/locales/en.json
@@ -1,3 +1,4 @@
 {
-    "heading_1": "Tell us little more about yourself", "heading_2": "About you"
+  "heading_1": "Tell us more about yourself",
+  "heading_2": "About you"
 }
