--- a/src/pages/RegisterAnonymous/locales/en.json
+++ b/src/pages/RegisterAnonymous/locales/en.json
@@ -1,4 +1,4 @@
 {
   "heading": "Register anonymously",
-  "subheading": "You will be registered anonymously so we will not link this account to a physical person."
+  "subheading": "You will be registered anonymously. We will not link this account to a physical person in any way."
 }
