--- a/src/pages/RegisterSupport/locales/en.json
+++ b/src/pages/RegisterSupport/locales/en.json
@@ -1,4 +1,4 @@
 {
-    "heading_1": "Do you need support?",
-    "heading_2": "Do you need support at this moment?"
+  "heading_1": "Do you need support?",
+  "heading_2": "Do you need support right now?"
 }
