--- a/src/pages/SOSCenter/locales/en.json
+++ b/src/pages/SOSCenter/locales/en.json
@@ -1,4 +1,4 @@
 {
   "heading": "Emergency",
-  "subheading": "If you need urgent help please contact the following organizations"
+  "subheading": "Need help urgently? Please, contact some of the listed centers right now."
 }
