--- a/src/pages/SelectProvider/locales/en.json
+++ b/src/pages/SelectProvider/locales/en.json
@@ -1,5 +1,5 @@
 {
   "heading": "Select a Provider ",
-  "subheading": "Select the provider that you want to talk to in a audio/video consultation",
+  "subheading": "Choose the provider you want to talk to in a video, audio or text consultation",
   "button_label": "Filter"
 }
