--- a/src/pages/SharePlatform/locales/en.json
+++ b/src/pages/SharePlatform/locales/en.json
@@ -1,4 +1,4 @@
 {
-    "heading": "Share the application",
-    "subheading": "Share the application on your social media, to get to more people with problems and help them"
+  "heading": "Share the application",
+  "subheading": "Share the application on your social media, and give more people the chance to help them."
 }
