--- a/src/pages/UserProfile/locales/en.json
+++ b/src/pages/UserProfile/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "heading": "User profile",
-    "subheading": "Here you can find all the information you need for your profile and account settings.",
-    "button_label": "Logout"
+  "heading": "Your profile",
+  "subheading": "Here you can find all the information you need for your profile and account settings.",
+  "button_label": "Logout"
 }
