Refactor: styling and functionality adjustments

--- a/src/backdrops/FilterProviders/locales/en.json
+++ b/src/backdrops/FilterProviders/locales/en.json
@@ -3,7 +3,7 @@
   "subheading": "Choose the provider you want to talk to in an audio/video consultation",
   "provider_psychologist": "Psychologist",
   "provider_psychotherapist": "Psychotherapist",
-  "provider_coach": "Coach",
+  "provider_psychiatrist": "Psychiatrist",
   "male": "Male",
   "female": "Female",
   "unspecified": "Unspecified",
