--- a/src/blocks/SOSCenter/locales/en.json
+++ b/src/blocks/SOSCenter/locales/en.json
@@ -1,4 +1,5 @@
 {
-  "button": "Contact now",
-  "no_results": "An error occured while loading the content."
+  "button_link": "Visit website",
+  "button_call": "Contact now",
+  "no_results": "There are no results for the current selected country and language."
 }
