Fix: view all buttons styling in InformationPortal page

--- a/src/pages/InformationPortal/locales/en.json
+++ b/src/pages/InformationPortal/locales/en.json
@@ -3,5 +3,6 @@
   "subheading": "Here you can explore everything you need to improve your mental health",
   "heading_newest": "Newest Articles",
   "heading_popular": "Most popular",
-  "heading_no_language_results": "We could not find any articles based on your selected language."
+  "heading_no_language_results": "We could not find any articles based on your selected language.",
+  "view_all": "View all"
 }
