Refactor: styling and functionality adjustments

--- a/src/backdrops/CancelConsultation/locales/en.json
+++ b/src/backdrops/CancelConsultation/locales/en.json
@@ -2,5 +2,12 @@
   "heading": "Are you sure you want to cancel your consultation",
   "cancel_button_label": "Cancel consultation",
   "keep_button_label": "Keep the consultation",
-  "cancel_success": "The consultation has been cancelled"
+  "cancel_success": "The consultation has been cancelled",
+  "sunday": "Sun",
+  "monday": "Mon",
+  "tuesday": "Tue",
+  "wednesday": "Wed",
+  "thursday": "Thu",
+  "friday": "Fri",
+  "saturday": "Sat"
 }
