--- a/src/blocks/Page/locales/en.json
+++ b/src/blocks/Page/locales/en.json
@@ -1,11 +1,11 @@
 {
   "page_1": "Home",
   "page_2": "Consultations",
-  "page_3": "Information Portal",
+  "page_3": "Information portal",
 
   "footer_1": "Home",
   "footer_2": "Consultations",
-  "footer_3": "Information Portal",
+  "footer_3": "Information portal",
   "footer_4": "Your profile",
   "footer_5": "Terms and Conditions",
   "footer_6": "Privacy Policy",
