--- a/src/blocks/ProviderOverview/locales/en.json
+++ b/src/blocks/ProviderOverview/locales/en.json
@@ -1,11 +1,11 @@
 {
   "earliest_slot_label": "Earliest available slot for consultation",
-  "languages_label": "Language of operation",
+  "languages_label": "Languages",
   "education_label": "Education",
-  "work_with_label": "Working with",
+  "work_with_label": "Specialties",
   "specializations_label": "Specializations",
   "done_consultations_label": "Overall done consultations",
-  "description_label": "Description",
+  "description_label": "About me",
   "edit_details": "Edit details",
   "change_password": "Change password",
   "delete_account": "Delete account",
