--- a/src/pages/InformationPortal/locales/en.json
+++ b/src/pages/InformationPortal/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Information Portal",
+  "heading": "Information portal",
   "subheading": "Here you can explore everything you need to improve your mental health",
   "heading_newest": "Newest Articles",
   "heading_popular": "Most popular",
