Refactor: functionality adjustments

--- a/src/pages/Consultation/locales/en.json
+++ b/src/pages/Consultation/locales/en.json
@@ -6,5 +6,9 @@
   "thursday": "Thu",
   "friday": "Fri",
   "saturday": "Sat",
-  "client_left": "Client left the consultation"
+  "client_left": "Client left the consultation",
+  "client_camera_off": "The client has turned off the camera",
+  "client_camera_on": "The client has turned on the camera",
+  "client_microphone_off": "The client has turned off the microphone",
+  "client_microphone_on": "The client has turned on the microphone"
 }
