Refactor: change 'Register anonymously' to 'Access anonymously'

--- a/src/blocks/RegisterPreview/locales/en.json
+++ b/src/blocks/RegisterPreview/locales/en.json
@@ -1,5 +1,5 @@
 {
   "register_email": "Register with email",
-  "register_anonymously": "Register anonymously",
+  "register_anonymously": "Access anonymously",
   "continue_as_guest": "Continue without registration"
 }
