--- a/src/blocks/UserProfile/locales/en.json
+++ b/src/blocks/UserProfile/locales/en.json
@@ -10,5 +10,6 @@
   "contact_us_button_label": "Contact us",
   "privacy_policy_button_label": "Privacy Policy",
   "FAQ_button_label": "FAQ",
-  "mood_tracker_button_label": "Mood tracker"
+  "mood_tracker_button_label": "Mood tracker",
+  "payments_history_button_label": "Payment History"
 }
