--- a/src/blocks/PaymentHistory/locales/en.json
+++ b/src/blocks/PaymentHistory/locales/en.json
@@ -2,5 +2,6 @@
   "service": "Service",
   "price": "Price",
   "date_of_payment": "Date of payment",
-  "more_details": "More detais"
+  "more_details": "More detais",
+  "no_payments_history_found": "You don't have any payments history yet"
 }
