--- a/src/modals/PaymentInformation/locales/en.json
+++ b/src/modals/PaymentInformation/locales/en.json
@@ -3,6 +3,7 @@
   "service": "Service: ",
   "date_of_consultation": "Date of Consultation: ",
   "date_of_payment": "Date of Payment: ",
+  "time_of_payment": "Time of Payment: ",
   "payment_method": "Payment Method: ",
   "recipient": "Recipient: ",
   "email_address": "Email Address: ",
