Refactor: add translations

--- a/src/blocks/ProviderOverview/locales/en.json
+++ b/src/blocks/ProviderOverview/locales/en.json
@@ -26,5 +26,6 @@
   "relationship": "Relationship",
   "personal_development": "Personal development",
   "video_label": "Video representation",
-  "button_label": "Schedule consultation"
+  "button_label": "Schedule consultation",
+  "hour_consultation": "for 1 hour consultation"
 }
