--- a/src/backdrops/CancelConsultation/locales/en.json
+++ b/src/backdrops/CancelConsultation/locales/en.json
@@ -1,6 +1,6 @@
 {
   "heading": "Are you sure you want to cancel your consultation",
-  "paid_heading": "Are you sure you want to cancel your consultation and lose the ${{price}} fee?",
+  "paid_heading": "Are you sure you want to cancel your consultation and lose the {{price}}{{currencySymbol}} fee?",
   "paid_cancel_subheading": "You are cancelling the consultation in less than 24 hours before it. You will lose the money payed for the consultation.",
   "cancel_button_label": "Cancel consultation",
   "keep_button_label": "Keep consultation",
@@ -11,5 +11,6 @@
   "wednesday": "Wed",
   "thursday": "Thu",
   "friday": "Fri",
-  "saturday": "Sat"
+  "saturday": "Sat",
+  "free": "Free"
 }
