--- a/src/blocks/PaymentHistory/locales/en.json
+++ b/src/blocks/PaymentHistory/locales/en.json
@@ -3,5 +3,6 @@
   "price": "Price",
   "date_of_payment": "Date of payment",
   "more_details": "More detais",
-  "no_payments_history_found": "You don't have any payments history yet"
+  "no_payments_history_found": "You don't have any payments history yet",
+  "text_audio_video_consultation": "Online consultation"
 }
