Add: a timer in the CheckoutForm

--- a/src/blocks/CheckoutForm/locales/en.json
+++ b/src/blocks/CheckoutForm/locales/en.json
@@ -5,6 +5,9 @@
   "payment_something_went_wrong": "Something went wrong, please try again.",
   "payment_unexpected_error": "An unexpected error occurred.",
   "button_pay_now": "Pay now",
-  "payment_info": "If you do not pay due to 15 minutes the reservation for consultation session will be canceled.",
-  "total_heading": "Total: "
+  "payment_info": "If you do not pay in 5 minutes the reservation for consultation session will be canceled.",
+  "total_heading": "Total: ",
+  "timeout_heading": "Payment session expired",
+  "consultation_timeout": "Your reservation has been cancelled due to inactivity. Please schedule your consultation again.",
+  "continue_button": "Continue"
 }
