--- a/src/modals/RequireDataAgreement/locales/en.json
+++ b/src/modals/RequireDataAgreement/locales/en.json
@@ -1,6 +1,8 @@
 {
   "heading": "You need to give us permission to process your personal data",
-  "text": "To provide access to the consultations, we need your permission to process your personal data.",
+  "text": "Your personal information will not be exposed, this permission will be used only for medical data and chat history to be proccesed and stored in the platform.",
+  "text2": "Before giving permission you can read our ",
+  "terms": "Terms and conditions.",
   "give_permission": "Give permission",
   "cancel": "Cancel"
 }
