Fix: Articles, ArticlesDashbaord and InformationPortal to pass the translations to the CardMedia component

--- a/src/pages/InformationPortal/locales/kk.json
+++ b/src/pages/InformationPortal/locales/kk.json
@@ -4,5 +4,7 @@
   "heading_newest": "Соңғы мақалалар",
   "heading_popular": "Ең танымал",
   "heading_no_language_results": "Сіз таңдаған тілде мақалалар таба алмадық.",
-  "view_all": "Барлығын көру"
+  "view_all": "Барлығын көру",
+  "read_more_button": "Read more",
+  "min_read": "min read"
 }
