--- a/src/blocks/ArticlesDashboard/locales/en.json
+++ b/src/blocks/ArticlesDashboard/locales/en.json
@@ -2,5 +2,7 @@
   "heading": "Articles",
   "heading_no_results": "No results.",
   "view_all": "View all",
-  "all": "All"
+  "all": "All",
+  "read_more_button": "Read more",
+  "min_read": "min read"
 }
