--- a/src/blocks/ArticlesDashboard/locales/kk.json
+++ b/src/blocks/ArticlesDashboard/locales/kk.json
@@ -2,5 +2,7 @@
   "heading": "Мақалалар",
   "heading_no_results": "Ештеңе табылмады",
   "view_all": "Барлығын көріп шығу",
-  "all": "Барлығы"
+  "all": "Барлығы",
+  "read_more_button": "Read more",
+  "min_read": "min read"
 }
