--- a/src/blocks/ArticlesDashboard/locales/ru.json
+++ b/src/blocks/ArticlesDashboard/locales/ru.json
@@ -2,5 +2,7 @@
   "heading": "Статьи",
   "heading_no_results": "Ничего не нашлось",
   "view_all": "Посмотреть все",
-  "all": "Все"
+  "all": "Все",
+  "read_more_button": "Read more RU",
+  "min_read": "min read"
 }
