--- a/src/pages/InformationPortal/locales/ru.json
+++ b/src/pages/InformationPortal/locales/ru.json
@@ -4,5 +4,7 @@
   "heading_newest": "Новейшие статьи",
   "heading_popular": "Самые популярные",
   "heading_no_language_results": "Мы не смогли найти статьи на выбранном вами языке.",
-  "view_all": "Посмотреть все"
+  "view_all": "Посмотреть все",
+  "read_more_button": "Read more",
+  "min_read": "min read"
 }
