Fix: russian translations in Articles block

--- a/src/blocks/Articles/locales/ru.json
+++ b/src/blocks/Articles/locales/ru.json
@@ -2,5 +2,7 @@
   "heading": "Информационный портал",
   "no_results": "Ничего не нашлось",
   "could_not_load_content": "Для выбранной страны и языка ничего не нашлось.",
-  "all": "Все"
+  "all": "Все", 
+  "read_more_button": "Read more",
+  "min_read":	"min read"
 }
