--- a/src/pages/ArticleInformation/locales/kk.json
+++ b/src/pages/ArticleInformation/locales/kk.json
@@ -1,4 +1,6 @@
 {
   "heading": "Көбірек мақалалар",
-  "no_results": "Таңдалған тілде ұқсас мақалалар жоқ."
+  "no_results": "Таңдалған тілде ұқсас мақалалар жоқ.",
+  "read_more_button": "Read more",
+  "min_read":	"min read"
 }
