--- a/src/pages/ArticleInformation/locales/ru.json
+++ b/src/pages/ArticleInformation/locales/ru.json
@@ -1,4 +1,6 @@
 {
   "heading": "Больше статей",
-  "no_results": "На выбранном языке нет похожих статей."
+  "no_results": "На выбранном языке нет похожих статей.",
+  "read_more_button": "Read more",
+  "min_read":	"min read"
 }
