--- a/src/blocks/ArticlesDashboard/locales/kk.json
+++ b/src/blocks/ArticlesDashboard/locales/kk.json
@@ -4,5 +4,6 @@
   "view_all": "Барлығын көріп шығу",
   "all": "Барлығы",
   "read_more_button": "Read more",
-  "min_read": "min read"
+  "min_read": "min read",
+  "by": "by {{creator}}"
 }
