--- a/src/pages/ArticleInformation/locales/kk.json
+++ b/src/pages/ArticleInformation/locales/kk.json
@@ -2,5 +2,6 @@
   "heading": "Көбірек мақалалар",
   "no_results": "Таңдалған тілде ұқсас мақалалар жоқ.",
   "read_more_button": "Read more",
-  "min_read":	"min read"
+  "min_read":	"min read",
+  "by": "by {{creator}}"
 }
