--- a/src/pages/InformationPortal/locales/en.json
+++ b/src/pages/InformationPortal/locales/en.json
@@ -6,5 +6,6 @@
   "heading_no_language_results": "We could not find any articles based on your selected language.",
   "view_all": "View all",
   "read_more_button": "Read more",
-  "min_read": "min read"
+  "min_read": "min read",
+  "by": "By {{creator}}"
 }
