--- a/src/modals/SaveAccessCodeConfirmation/locales/ru.json
+++ b/src/modals/SaveAccessCodeConfirmation/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "heading": "Подтвердите, что Вы сохранили свой код доступа",
   "text": "Убедитесь, что Вы сохранили или записали свой код доступа. В противном случае Вы потеряете доступ к свому анонимному аккаунту и своему прогрессу в приложении.",
-  "button": "Я сохранил(-а) код доступа"
+  "button": "Я сохранил(-а) код доступа",
+  "warning": "I understand, that i will not have access to the account if i lose this code"
 }
