--- a/src/blocks/MoodTrackHistory/locales/kk.json
+++ b/src/blocks/MoodTrackHistory/locales/kk.json
@@ -11,6 +11,6 @@
   "sad": "Қайғылы",
   "depressed": "Депрессиядаs",
   "worried": "Қобалжыған",
-  "overall_mood": "Your overall feeling for the current week",
-  "view_more": "View more"
+  "overall_mood": "Осы аптадағы жалпы көңіл-күйіңіз",
+  "view_more": "Көбірек көру"
 }
