--- a/src/blocks/PlatformRating/locales/kk.json
+++ b/src/blocks/PlatformRating/locales/kk.json
@@ -3,5 +3,5 @@
   "textarea_label": "Сіздің алып-қосарыңыз",
   "textarea_placeholder": "Алып-қосарыңыз осында қалдырыңыз",
   "button_label": "Бағаны жіберу",
-  "success": "Rating sent successfully"
+  "success": "Бағалау сәтті жіберілді"
 }
