--- a/src/blocks/PlatformRating/locales/ru.json
+++ b/src/blocks/PlatformRating/locales/ru.json
@@ -3,5 +3,5 @@
   "textarea_label": "Ваш комментарий",
   "textarea_placeholder": "Оставьте свой комментарий здесь",
   "button_label": "Отправить оценку",
-  "success": "Rating sent successfully"
+  "success": "Оценка отправлена успешно"
 }
