--- a/src/blocks/ProviderOverview/locales/kk.json
+++ b/src/blocks/ProviderOverview/locales/kk.json
@@ -27,5 +27,5 @@
   "personal_development": "Жеке даму",
   "video_label": "Бейне-таныстырылым",
   "button_label": "Консультацияны жоспарлау",
-  "hour_consultation": "for 1 hour consultation"
+  "hour_consultation": "1 сағаттық консультация үшін"
 }
