--- a/src/blocks/ProviderOverview/locales/ru.json
+++ b/src/blocks/ProviderOverview/locales/ru.json
@@ -27,5 +27,5 @@
   "personal_development": "Личное развитие",
   "video_label": "Видео-представление",
   "button_label": "Запланировать консультацию",
-  "hour_consultation": "for 1 hour consultation"
+  "hour_consultation": "за 1 часовую консультацию"
 }
