--- a/src/blocks/UserProfile/locales/kk.json
+++ b/src/blocks/UserProfile/locales/kk.json
@@ -11,5 +11,5 @@
   "privacy_policy_button_label": "Құпиялық саясаты",
   "FAQ_button_label": "Жиі қойылатын сұрақтар",
   "mood_tracker_button_label": "Көңіл-күй трекері",
-  "payments_history_button_label": "Payment History"
+  "payments_history_button_label": "Төлем тарихы"
 }
