--- a/src/blocks/UserProfile/locales/ru.json
+++ b/src/blocks/UserProfile/locales/ru.json
@@ -11,5 +11,5 @@
   "privacy_policy_button_label": "Политика конфиденциальности",
   "FAQ_button_label": "Часто задаваемые вопросы",
   "mood_tracker_button_label": "Трекер настроения",
-  "payments_history_button_label": "Payment History"
+  "payments_history_button_label": "История платежей"
 }
