--- a/src/modals/RequireDataAgreement/locales/ru.json
+++ b/src/modals/RequireDataAgreement/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "heading": "Даете ли Вы нам разрешение на обработку своих персональных данных?",
-  "text": "Your personal information will not be exposed, this permission will be used only for medical data and chat history to be proccesed and stored in the platform.",
-  "text2": "Before giving permission you can read our ",
+  "text": "Ваша личная информация не будет раскрыта, это разрешение будет использоваться только для обработки и хранения на платформе клинических данных и истории чатов.",
+  "text2": "Прежде чем давать разрешение, Вы можете ознакомиться с ",
   "terms": "Условия и положения",
   "give_permission": "Дать разрешение",
   "cancel": "Отмена"
