--- a/src/pages/InformationPortal/locales/kk.json
+++ b/src/pages/InformationPortal/locales/kk.json
@@ -5,7 +5,7 @@
   "heading_popular": "Ең танымал",
   "heading_no_language_results": "Сіз таңдаған тілде мақалалар таба алмадық.",
   "view_all": "Барлығын көру",
-  "read_more_button": "Read more",
-  "min_read": "min read",
+  "read_more_button": "Ары қарай оқу",
+  "min_read": "минут оқуға",
   "by": "By {{creator}}"
 }
