--- a/src/blocks/ArticlesDashboard/locales/ru.json
+++ b/src/blocks/ArticlesDashboard/locales/ru.json
@@ -3,7 +3,7 @@
   "heading_no_results": "Ничего не нашлось",
   "view_all": "Посмотреть все",
   "all": "Все",
-  "read_more_button": "Read more RU",
-  "min_read": "min read",
+  "read_more_button": "Узнать больше",
+  "min_read": "минут на прочтение",
   "by": "by {{creator}}"
 }
