--- a/src/blocks/PaymentStatus/locales/en.json
+++ b/src/blocks/PaymentStatus/locales/en.json
@@ -1,6 +1,6 @@
 {
   "payment_succeded_heading": "Your payment was successful.",
-  "payment_succeded_subheading": "Thank you for your purchase you consultation is scheduled for {{consultationDate}} at {{consultationTime}}.",
+  "payment_succeded_subheading": "Thank you for your purchase. Your consultation is scheduled for {{consultationDate}} at {{consultationTime}}.",
 
   "payment_processing_heading": "Your payment is beeing processed.",
   "payment_processing_subheading": "We are processing your payment, please wait a moment.",
