--- a/src/blocks/PaymentStatus/locales/kk.json
+++ b/src/blocks/PaymentStatus/locales/kk.json
@@ -1,16 +1,16 @@
 {
-  "payment_succeded_heading": "Your payment was successful.",
-  "payment_succeded_subheading": "Thank you for your purchase you consultation is scheduled for {{consultationDate}} at {{consultationTime}}.",
+  "payment_succeded_heading": "Сіздің төлеміңіз сәтті өтті.",
+  "payment_succeded_subheading": "Сатып алғаныңыз үшін рахмет. Сіздің консультацияңыз {{consultationDate}} {{consultationTime}} жоспарланған.",
 
-  "payment_processing_heading": "Your payment is beeing processed.",
-  "payment_processing_subheading": "We are processing your payment, please wait a moment.",
+  "payment_processing_heading": "Сіздің төлеміңіз өңделуде",
+  "payment_processing_subheading": "Біз Сіздің төлеміңізді өңделуде, кішкене күте тұрыңыз.",
 
-  "payment_requires_payment_method_heading": "Your payment was not successful, please try again.",
-  "payment_requires_payment_method_subheading": "There was a problem while trying to process your payment. We are sorry about that.",
+  "payment_requires_payment_method_heading": "Сіздің төлеміңіз сәтті орындалмады, қайталап көріңіз.",
+  "payment_requires_payment_method_subheading": "Төлеміңізді өңдеуге тырысқанда мәселе туындады. Біз өкінеміз.",
 
-  "payment_failed_heading": "Your payment was not successful, please try again.",
-  "payment_failed_subheading": "There was a problem while trying to process your payment. We are sorry about that.",
+  "payment_failed_heading": "Сіздің төлеміңіз сәтті орындалмады, қайталап көріңіз.",
+  "payment_failed_subheading": "Төлеміңізді өңдеуге тырысқанда мәселе туындады. Біз өкінеміз.",
 
   "continue_button_label": "Жалғастыру",
-  "try_again_button_label": "Try again"
+  "try_again_button_label": "Қайталап көріңіз"
 }
