--- a/src/blocks/PaymentStatus/locales/ru.json
+++ b/src/blocks/PaymentStatus/locales/ru.json
@@ -1,16 +1,16 @@
 {
-  "payment_succeded_heading": "Your payment was successful.",
-  "payment_succeded_subheading": "Thank you for your purchase you consultation is scheduled for {{consultationDate}} at {{consultationTime}}.",
+  "payment_succeded_heading": "Ваш платеж прошел успешно.",
+  "payment_succeded_subheading": "Благодарим Вас за покупку. Ваша консультация запланирована на {{consultationDate}} в {{consultationTime}}.",
 
-  "payment_processing_heading": "Your payment is beeing processed.",
-  "payment_processing_subheading": "We are processing your payment, please wait a moment.",
+  "payment_processing_heading": "Ваш платеж обрабатывается.",
+  "payment_processing_subheading": "Мы обрабатываем Ваш платеж, пожалуйста, немного подождите.",
 
-  "payment_requires_payment_method_heading": "Your payment was not successful, please try again.",
-  "payment_requires_payment_method_subheading": "There was a problem while trying to process your payment. We are sorry about that.",
+  "payment_requires_payment_method_heading": "Ваш платеж не прошел, пожалуйста, попробуйте еще раз.",
+  "payment_requires_payment_method_subheading": "При попытке обработать Ваш платеж возникла проблема. Мы сожалеем об этом.",
 
-  "payment_failed_heading": "Your payment was not successful, please try again.",
-  "payment_failed_subheading": "There was a problem while trying to process your payment. We are sorry about that.",
+  "payment_failed_heading": "Ваш платеж не прошел успешно, пожалуйста, попробуйте еще раз.",
+  "payment_failed_subheading": "При попытке обработать Ваш платеж возникла проблема. Мы сожалеем об этом.",
 
   "continue_button_label": "Продолжить",
-  "try_again_button_label": "Try again"
+  "try_again_button_label": "Пробовать снова"
 }
