--- a/src/modals/RequireDataAgreement/locales/kk.json
+++ b/src/modals/RequireDataAgreement/locales/kk.json
@@ -1,7 +1,7 @@
 {
   "heading": "Сіз бізге дербес деректеріңізді өңдеуге рұқсат бересіз бе?",
-  "text": "Your personal information will not be exposed, this permission will be used only for medical data and chat history to be proccesed and stored in the platform.",
-  "text2": "Before giving permission you can read our ",
+  "text": "Сіздің жеке ақпаратыңыз ашылмайды, бұл рұқсат тек клиникалық деректер және чат тарихында өңдеу және сақтау үшін платформада пайдаланылады.",
+  "text2": "Рұқсат бермес бұрын, Сіз таныса алатын ",
   "terms": "Шарттар мен ережелер",
   "give_permission": "Рұқсат беру",
   "cancel": "Болдырмау"
