--- a/src/pages/Checkout/locales/kk.json
+++ b/src/pages/Checkout/locales/kk.json
@@ -1,4 +1,4 @@
 {
-  "heading": "Payment",
-  "subheading": "Enter your card details to pay for this session."
+  "heading": "Төлем",
+  "subheading": "Осы сеансты төлеу үшін өзіңіздің карта деректерін енгізіңіз."
 }
