--- a/src/pages/Checkout/locales/ru.json
+++ b/src/pages/Checkout/locales/ru.json
@@ -1,4 +1,4 @@
 {
-  "heading": "Payment",
-  "subheading": "Enter your card details to pay for this session."
+  "heading": "Платеж",
+  "subheading": "Введите данные своей карты для оплаты этого сеанса."
 }
