--- a/src/pages/InformationPortal/locales/ru.json
+++ b/src/pages/InformationPortal/locales/ru.json
@@ -5,7 +5,7 @@
   "heading_popular": "Самые популярные",
   "heading_no_language_results": "Мы не смогли найти статьи на выбранном вами языке.",
   "view_all": "Посмотреть все",
-  "read_more_button": "Read more",
-  "min_read": "min read",
+  "read_more_button": "Узнать больше",
+  "min_read": "минут на прочтение",
   "by": "By {{creator}}"
 }
