--- a/src/blocks/ConsultationsDashboard/locales/kk.json
+++ b/src/blocks/ConsultationsDashboard/locales/kk.json
@@ -5,5 +5,21 @@
   "live_text": "Қазір",
   "accept_button_label": "Консультацияны қабылдау",
   "join_button_label": "Қосылу",
-  "change_button_label": "Кілтсөзді өзгерту"
+  "change_button_label": "Кілтсөзді өзгерту",
+  "ordinal_st": "-ші",
+  "ordinal_nd": "-ші",
+  "ordinal_rd": "-ші",
+  "ordinal_th": "-ші/-шы",
+  "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December"
 }
