Fix: translations in Header component

--- a/src/backdrops/SelectConsultation/locales/en.json
+++ b/src/backdrops/SelectConsultation/locales/en.json
@@ -4,5 +4,24 @@
   "subheading_edit": "Suggest the date and time for rescedule of this appointment.",
   "subheading_new": "Select the date and time of the appointment.",
   "cta_button_label": "Save",
-  "no_slots_available": "There are no available slots for the selected day."
+  "no_slots_available": "There are no available slots for the selected day.",
+  "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December",
+  "su":	"Su",
+  "mo":	"Mo",
+  "tu":	"Tu",
+  "we":	"We",
+  "th":	"Th",
+  "fr":	"Fr",
+  "sa":	"Sa"
 }
