--- a/src/backdrops/SelectConsultation/locales/kk.json
+++ b/src/backdrops/SelectConsultation/locales/kk.json
@@ -4,5 +4,24 @@
   "subheading_edit": "Осы кездесуді ауыстыратын күн мен уақытты ұсыныңыз.",
   "subheading_new": "Кездесу күні мен уақытын таңдаңыз.",
   "cta_button_label": "Сақтау",
-  "no_slots_available": "Таңдалған күні бос орындар жоқ."
+  "no_slots_available": "Таңдалған күні бос орындар жоқ.",
+  "january": "Январь",
+  "february": "Февраль",
+  "march": "Март",
+  "april": "Апрель",
+  "may": "Май",
+  "june": "Июнь",
+  "july": "Июль",
+  "august": "Август",
+  "september": "Сентябрь",
+  "october": "Октябрь",
+  "november": "Ноябрь",
+  "december": "Декабрь",
+  "su":	"Жс",
+  "mo":	"Дс",
+  "tu":	"Сс",
+  "we":	"Ср",
+  "th":	"Бс",
+  "fr":	"Жм",
+  "sa":	"Сб"
 }
